<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_9">

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_id"
            android:textSize="@dimen/text_size_28"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_name"
            android:textSize="@dimen/text_size_28"/>

        <TextView
            android:id="@+id/tvUserSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_surname"
            android:textSize="@dimen/text_size_28"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUserGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_gender"
            android:textSize="@dimen/text_size_28"/>

        <TextView
            android:id="@+id/tvUserAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_age"
            android:textSize="@dimen/text_size_28"/>
    </LinearLayout>

</LinearLayout>